2005-07-24  graydon hoare  <graydon@pobox.com>

	* cset.cc (change_automaton): New random-testing struct.
	(automaton_cset_test): New test using it.
	Lots of bugs picked out by random tester.

2005-07-23  graydon hoare  <graydon@pobox.com>

	* basic_io.{cc,hh} (basic_io::stanza::push_str_triple): New method.
	* cset.cc ({parse,print,read,write}_mfest): New methods.

2005-07-18  graydon hoare  <graydon@pobox.com>

	* cset.cc: More bugfixing, passes first unit test.

2005-07-16  graydon hoare  <graydon@pobox.com>

	* cset.cc: Bugfixing, copy-on-write, attribute support.

2005-06-19  graydon hoare  <graydon@pobox.com>

	* cset.cc: Rewrite-in-progress on change_set.cc.

2005-07-23  Matthew Gregan  <kinetik@orcon.net.nz>

	* commands.cc (CMD(annotate)): Check for a valid revision before
	trying to fetch it from the database.
	* lua/lundump.[ch], lua/ldump.c: Rename VERSION and VERSION0 to
	LUA_DUMP_VERSION and LUA_DUMP_VERSION0 to avoid clashes with
	VERSION from config.h.

2005-07-22  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Committing Work): Remove discussion of manifests.

2005-07-20  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (rebuild_merkle_trees): Make 'including branch'
	message L() instead of P(); it's nice information, but too much to
	be useful with large databases.

2005-07-22  Matt Johnston  <matt@ucc.asn.au>

	* database_check.cc: check that revisions and manifests
	are normalised to the same for that they would be written as.
	* tests/t_database_check_normalized.at: a test for it.
	* testsuite.at: add it.

2005-07-21  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-import.pl: Now uses the given tag.

2005-07-20  Marcel van der Boom  <marcel@hsdev.com>

	* database.{cc,hh} (get_branches): New method.
	* commands.cc (ls_branches): Use it.
	* netsync.cc (get_branches): Likewise.
	* tests/t_ls_branches.at: New test.
	* testsuite.at: Add it.
	
2005-07-20  Nathaniel Smith  <njs@pobox.com>
